--- a/PHP/case3/cssdemo.htm
+++ b/PHP/case3/cssdemo.htm
@@ -18,7 +18,7 @@
    -->
 
       <meta charset="UTF-8" />
-      <title>CSS Styles Demo</title>
+      <title>Whatever it doesnt matter</title>
 
       <script src="modernizr-1.5.js"></script>
       <script src="rundemo.js"></script>
